# Runge-Kutta-methods

./: .gitignore  CLAUDE.md  CMakeLists.txt  GUIDE.md  INFO.md  Makefile  README.md  binding.cpp  err.txt  method_bindings.hpp
python/: energy.py  solving.py
python/examples/: double_pendulum.py  mercury.py  orbits.py  pendulum.py  plots.py  rocket_to_moon.py  solving.py  text.py
python/sem/: animate.py  constants.py  initial.py  nbody.py  three_body.py
src/: butcher-tableau.cpp  physics.cpp  physics.hpp  runge-kutta.cpp  runge-kutta.hpp  utils.cpp  utils.hpp
tests/: README.md
tests/cpp/: CMakeLists.txt  test_butcher_tableau.cpp  test_runge_kutta.cpp
tests/python/: conftest.py  test_methods.py
